Changement des perceptions, ajout du cos et du sin