@@ -12,7 +12,7 @@ import java.util.List;
 public class AgentCompass extends Compass {
     private Team observed_team;
     private double maxDistanceVision;
-    public static int numberOfPerceptionsValuesNormalise = 2;
+    public static int numberOfPerceptionsValuesNormalise = 3;
 
     public AgentCompass(Agent a, Filter filter) {
         super(a, filter);
@@ -62,12 +62,16 @@ public class AgentCompass extends Compass {
 
     @Override
     public List<Double> getPerceptionsValuesNormalise() {
-        List<Double> perceptionsValuesNormalise = new ArrayList<>(getPerceptionValues().getFirst().vector());
-        perceptionsValuesNormalise.set(0, perceptionsValuesNormalise.get(0)/maxAngle);
+        List<Double> perceptionsValues = getPerceptionValues().getFirst().vector();
+        List<Double> perceptionsValuesNormalise = new ArrayList<>();
+        perceptionsValuesNormalise.add(Math.cos(perceptionsValues.get(0)));
+        perceptionsValuesNormalise.add(Math.sin(perceptionsValues.get(0)));
+
         if (perceptionsValuesNormalise.get(1) > maxDistanceVision)
-            perceptionsValuesNormalise.set(1, 0.0);
+            perceptionsValuesNormalise.add(1.0);
         else
-            perceptionsValuesNormalise.set(1, perceptionsValuesNormalise.get(1)/maxDistanceVision);
+            perceptionsValuesNormalise.add(perceptionsValues.get(1)/maxDistanceVision);
+
         return perceptionsValuesNormalise;
     }
 
