@@ -13,7 +13,7 @@ import java.util.List;
 public class FlagCompass extends Compass {
     private boolean ignoreHolded;
     private double maxDistanceVision;
-    public static int numberOfPerceptionsValuesNormalise = 3;
+    public static int numberOfPerceptionsValuesNormalise = 4;
     /**
      * constrcutor of NearestFlagCompass
      * @param a agent using this perception
@@ -76,12 +76,17 @@ public class FlagCompass extends Compass {
 
     @Override
     public List<Double> getPerceptionsValuesNormalise() {
-        List<Double> perceptionsValuesNormalise = new ArrayList<>(getPerceptionValues().getFirst().vector());
-        perceptionsValuesNormalise.set(0, perceptionsValuesNormalise.get(0)/maxAngle);
+        List<Double> perceptionsValues = getPerceptionValues().getFirst().vector();
+        List<Double> perceptionsValuesNormalise = new ArrayList<>();
+        perceptionsValuesNormalise.add(Math.cos(perceptionsValues.get(0)));
+        perceptionsValuesNormalise.add(Math.sin(perceptionsValues.get(0)));
+
         if (perceptionsValuesNormalise.get(1) > maxDistanceVision)
-            perceptionsValuesNormalise.set(1, 0.0);
+            perceptionsValuesNormalise.add(1.0);
         else
-            perceptionsValuesNormalise.set(1, perceptionsValuesNormalise.get(1)/maxDistanceVision);
+            perceptionsValuesNormalise.add(perceptionsValues.get(1)/maxDistanceVision);
+
+        perceptionsValuesNormalise.add(perceptionsValues.get(2));
         return perceptionsValuesNormalise;
     }
 
