@@ -14,7 +14,7 @@ public class TerritoryCompass extends Compass {
 
     private final int maxAngle = 360;
     private double maxDistanceVision;
-    public static int numberOfPerceptionsValuesNormalise = 2;
+    public static int numberOfPerceptionsValuesNormalise = 3;
 
     public TerritoryCompass(Agent a, Filter filter) {
         super(a, filter);
@@ -75,12 +75,16 @@ public class TerritoryCompass extends Compass {
 
     @Override
     public List<Double> getPerceptionsValuesNormalise() {
-        List<Double> perceptionsValuesNormalise = new ArrayList<>(getPerceptionValues().getFirst().vector());
-        perceptionsValuesNormalise.set(0, perceptionsValuesNormalise.get(0)/maxAngle);
+        List<Double> perceptionsValues = getPerceptionValues().getFirst().vector();
+        List<Double> perceptionsValuesNormalise = new ArrayList<>();
+        perceptionsValuesNormalise.add(Math.cos(perceptionsValues.get(0)));
+        perceptionsValuesNormalise.add(Math.sin(perceptionsValues.get(0)));
+
         if (perceptionsValuesNormalise.get(1) > maxDistanceVision)
-            perceptionsValuesNormalise.set(1, 0.0);
+            perceptionsValuesNormalise.add(1.0);
         else
-            perceptionsValuesNormalise.set(1, perceptionsValuesNormalise.get(1)/maxDistanceVision);
+            perceptionsValuesNormalise.add(perceptionsValues.get(1)/maxDistanceVision);
+
         return perceptionsValuesNormalise;
     }
 
